# LexerSearch

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
lexer-search-lib/: Cargo.toml  PATTERN-GUIDE.md
lexer-search-lib/examples/: README.md  python_kwarg.yml  tester.yml  tester_fmt_str.yml  transform_regex.yml
lexer-search-lib/examples/assert_not_in_test/: 0_test_fn.yml  1_assert.yml  results.ndjson  test.rs
lexer-search-lib/examples/double_free/: 0_double_free.yml  0_negative.yml  0_same_scope_found.yml  0_same_scope_no.yml  1_exclude.yml  1_negative.yml  _0_positive.yml  _1_positive.yml  results.ndjson  test.c
lexer-search-lib/examples/fmt_str/: results.ndjson  test.rs  tester_fmt_str.yml
lexer-search-lib/examples/grouping/: 0_anchor.yml  1_dist.yml  2_method.yml  2_other_unique.yml  results.ndjson  test.java
lexer-search-lib/examples/key_size_group/: 0_anchor.yml  1_alg_name.yml  2_key_size.yml  3_enabled.yml  test.java
lexer-search-lib/examples/kwarg/: python_kwarg.yml  results.ndjson  test.py
lexer-search-lib/examples/no_free/: 0_malloc.yml  1_exclude.yml  results.ndjson  tester.c
lexer-search-lib/examples/source_prop_sink/: results.ndjson  source_prop_sink.yml  test.rs
lexer-search-lib/examples/source_sanitizer_sink/: negative.yml  positive.yml  results.ndjson  test.rs
lexer-search-lib/examples/source_sink/: results.ndjson  source_sink.yml  test.rs
lexer-search-lib/examples/templates/: example.c  example.yml  results.ndjson
lexer-search-lib/examples/transform_regex/: results.ndjson  test.rs  transform_regex.yml
lexer-search-lib/src/: lib.rs
lexer-search-lib/src/engine/: canonicalizer.rs  graph.rs  graph_test.rs  grouper.rs  matcher.rs  matchers.rs  mod.rs  regex_cache.rs  span.rs  template.rs  token.rs
lexer-search-lib/src/io/: mod.rs
lexer-search-lib/src/lexer/: c_like.rs  mod.rs  python_like.rs  rust_like.rs
src/: main.rs
