[package]
name = "lexer-search"
version = "0.2.2"
edition = "2024"

[workspace]
default-members = [
    ".",
    "lexer-search-lib"
]

[dependencies]
lexer-search-lib = { path = "./lexer-search-lib" }
clap = { version = "4.5", features = ["derive"] }
bincode = { version = "2.0", features = ["serde"], optional = true }
serde_json = "1.0.149"
walkdir = "2.5.0"
crossbeam = "0.8.4"
num_cpus = "1.17.0"

[build-dependencies]
lexer-search-lib = { path = "./lexer-search-lib" }
bincode = { version = "2.0", features = ["serde"]}
chrono = "0.4.44"

[features]
embed-patterns = ["bincode"]

