[package]
name = "lexer-search-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
regex-lite = "0.1.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_yml = "0.0.12"
walkdir = "2.5.0"
rayon = { version = "1.10", optional = true }

[features]
default = []
fuzzer = ["dep:rayon"]
