[package]
name = "lexer-search-lib"
version = "3.4.2"
edition = "2024"

[dependencies]
regex-lite = "0.1.8"
serde = { version = "1.0.228", features = ["derive"] }
bincode = { version = "2.0", features = ["derive"]}
serde_json = "1.0.148"
serde_yml = "0.0.12"
walkdir = "2.5.0"
rayon = { version = "1.10", optional = true }
blake3 = "1.8.5"
rand = "0.10.1"
lru = "0.18.0"
smallvec = { version = "1.15.1", features = ["serde"] }
ahash = { version = "0.8.12", features = ["serde"] }

[features]
default = []
fuzzer = ["dep:rayon"]
